# doc2txt-pypi

./: CLAUDE.md  PKG-INFO  pyproject.toml  setup.py
.github/workflows/: publish.yml
doc2txt/: text_optimizer.py
tests/: main.py  output.txt  output_chi.txt
